--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Wyatt Owen</h1>
+<html>
+<head>
+  <title>Works of Wyatt Owen</title>
+  <link rel="stylesheet" href"style.css">
+</head>
+<body>
+  <nav class="navigation">
+    <ul>
+      <li>SCHOOL</li>
+      <li>PERSONAL</li>
+      <li>about me</li>
+  <div id="banner">
+    <div id="content">
+      <h1>Wyatt Owen</h1>
+    </div>
+  </div>
+</html>
