Updated content on home

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Works of Wyatt Owen</title>
   <link rel="stylesheet" href"style.css">
 </head>
+
 <body>
   <nav class="navigation">
     <ul>
       <li>SCHOOL</li>
       <li>PERSONAL</li>
       <li>about me</li>
-  <div id="banner">
-    <div id="content">
-      <h1>Wyatt Owen</h1>
-    </div>
-  </div>
+      <div id="banner">
+        <div id="content">
+          <h1>Wyatt Owen</h1>
+        </div>
+      </div>
+      <div class="maincont">
+        <div id="aboutme">
+          <h3>About Wyatt Owen</h3>
+          <p>I am Wyatt Owen. I am currently a freshmen at the Univeristy of Alaska, Fairbanks pursuing my Bachelor of
+            Science in Computer Science. I believe in the future of technology our society is pursuing, we need as many
+            people in the technological fields as possible to keep the pillars of Privacy, Authentication, Security, and
+            Transparency in balance. With good intentions and foresight, the Computer Scientist of today, can be the
+            light for society tomorrow.</p>
+          <p>I joined the military in 2014, graduated the 25B Information Technology Specialist course in 2015. After
+            Graduating Airborne school a month later, I spent the three years in 4th BCT 25th ID (Airborne) in Fort
+            Richardson, Alaska, and some time deployed.</p>
+        </div>
+      </div>
+
 </html>
