--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Works of Wyatt Owen</title>
-  <link rel="stylesheet" href"style.css">
+  <link rel="stylesheet" href"https://github.com/wjowen/_riot_yumei/blob/5175ff2ab66e7a9acd6a46939179a66c20c5d958/Resources/style.css">
 </head>
 
 <body>
@@ -12,6 +12,7 @@
       <li>SCHOOL</li>
       <li>PERSONAL</li>
       <li>about me</li>
+    </ul>
       <div id="banner">
         <div id="content">
           <h1>Wyatt Owen</h1>
