--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Works of Wyatt Owen</title>
-  <link rel="stylesheet" href"https://github.com/wjowen/_riot_yumei/blob/5175ff2ab66e7a9acd6a46939179a66c20c5d958/Resources/style.css">
+  <link rel="stylesheet" type="test/css" href"https://wjowen.github.io/_ri-ot_akyumei/Resources/style.css">
 </head>
 
 <body>
