--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
   <title>Works of Wyatt Owen</title>
-  <link rel="stylesheet" type="test/css" href"https://wjowen.github.io/_ri-ot_akyumei/Resources/style.css">
+  <link rel="stylesheet" type="test/css" href"C:\Users\Wyatt Owen\Documents\GitHub\_rI-Ot_AKyUMEI\Resources\style.css">
 </head>
-
 <body>
   <nav class="navigation">
     <ul>
