fixed index href

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Works of Wyatt Owen</title>
-  <link rel="stylesheet" type="test/css" href"C:\Users\Wyatt_Owen\Documents\GitHub\_rI-Ot_AKyUMEI\Resources\style.css">
+  <link rel="stylesheet" type="test/css" href="https://wjowen.github.io/resources/style.css">
 </head>
 <body>
   <nav class="navigation">
