--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Works of Wyatt Owen</title>
-  <link rel="stylesheet" type="test/css" href="https://wjowen.github.io/style.css">
+  <link rel="stylesheet" type="text/css" href="https://wjowen.github.io/style.css">
 </head>
 <body>
   <nav class="navigation">
