--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <nav class="navigation">
-    <ul>
-      <li>SCHOOL</li>
-      <li>PERSONAL</li>
-      <li>about me</li>
-    </ul>
+  <header>
+    <nav>
+      <ul>
+        <li>SCHOOL</li>
+        <li>PERSONAL</li>
+        <li>about me</li>
+      </ul>
+    </nav>
+  </header>
       <div id="banner">
         <div id="content">
           <h1>Wyatt Owen</h1>
