--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li>SCHOOL</li>
-        <li>PERSONAL</li>
-        <li>about me</li>
-      </ul>
-    </nav>
-  </header>
+  <nav class="navigation">
+    <ul>
+      <li>
+        <a href="school.html">School Projects</a>
+      </li>
+      <li>
+        <a href="personal.html">Personal Projects</a>
+        </li>
+      <li>
+        <a href="aboutme.html">About Me</a>
+      </li>
+    </ul>
+  </nav>
       <div id="banner">
         <div id="content">
           <h1>Wyatt Owen</h1>
